# inferlab

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  pixi.toml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
crates/inferlab/: Cargo.toml  build.rs
crates/inferlab-protocol/: Cargo.toml
crates/inferlab-protocol/examples/: generate_schema.rs
crates/inferlab-protocol/src/: lib.rs  wire.rs
crates/inferlab-protocol/tests/: protocol.rs
crates/inferlab-proxy/: Cargo.toml
crates/inferlab-proxy/src/: core.rs  error.rs  lib.rs  sglang.rs  trtllm.rs  vllm_mooncake.rs  vllm_nixl.rs
crates/inferlab/resources/bundled-eval-tasks/estonia/: dataset.json  estonia.py  estonia.yaml  prompt.txt
crates/inferlab/resources/eval-toolchain/: pixi.toml
crates/inferlab/resources/plugin/.agents/plugins/: marketplace.json
crates/inferlab/resources/plugin/.claude-plugin/: marketplace.json
crates/inferlab/resources/plugin/plugins/inferlab/.claude-plugin/: plugin.json
crates/inferlab/resources/plugin/plugins/inferlab/.codex-plugin/: plugin.json
crates/inferlab/resources/plugin/plugins/inferlab/skills/inferlab/: SKILL.md
crates/inferlab/resources/toolchain-python/: bench_client.py  eval_client.py
crates/inferlab/resources/toolchain-python/inferlab_adapter_sdk/: __init__.py  _generated.py  runtime.py
crates/inferlab/src/: adapter.rs  adhoc.rs  agent.rs  atomic_json.rs  bench_metric.rs  cli.rs  container.rs  digest.rs  environment.rs  error.rs  image.rs  interrupt.rs  lib.rs  main.rs  operation.rs  process_group.rs  profiler.rs  progress.rs  recipe.rs  record.rs  resolve.rs  scratchpad.rs  shell.rs  ssh.rs  time_bound.rs  toml_override.rs  toolchain.rs  tui.rs  workload.rs  workspace.rs
crates/inferlab/src/image/: context.rs  launch.rs  record.rs  runtime.rs  tool.rs
crates/inferlab/src/server/: mod.rs  network.rs  record.rs  runtime.rs
crates/inferlab/src/snapshots/: inferlab__workspace__tests__source_digest_script_text_is_pinned.snap
crates/inferlab/src/tui/: app.rs  collector.rs  metrics.rs  presentation.rs  records.rs  scale_qualification.rs  search.rs  ui.rs  views.rs
crates/inferlab/src/tui/app/: metric_state.rs
crates/inferlab/src/tui/ui/: chrome.rs  detail.rs  metric_page.rs  text.rs  theme.rs
crates/inferlab/src/workload/: adaptive.rs  domain.rs  record.rs  runtime.rs  wire.rs
crates/inferlab/tests/: agent.rs  cli.rs  dry_run.rs  env_status.rs  environment.rs  error_registry.rs  harness.rs  image.rs  lifecycle.rs  manual_vllm.rs  packaging.rs  recipe.rs  run.rs  scratchpad.rs  toolchain.rs  workspace_show.rs
crates/inferlab/tests/fixtures/: dsv4-workspace.toml  image-workspace.toml
crates/inferlab/tests/support/: mod.rs
docs/: backend-support.md  tui.md  workspace-authoring.md
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008.md  ADR-0009.md  ADR-0010.md  ADR-0011.md  ADR-0012.md  ADR-0013.md  ADR-0014.md  ADR-0015.md  ADR-0016.md  ADR-0017.md  ADR-0018.md  ADR-0019.md  ADR-0020.md  ADR-0021.md
docs/rfc/: RFC-0001.md  RFC-0002.md  RFC-0003.md  RFC-0004.md  RFC-0005.md  RFC-0006.md  RFC-0007.md  RFC-0008.md  RFC-0009.md  RFC-0010.md  RFC-0011.md
plugins/inferlab/.claude-plugin/: plugin.json
plugins/inferlab/.codex-plugin/: plugin.json
protocol/fixtures/invalid/: request-unknown-field.json  response-wrong-shape.json
protocol/fixtures/valid/: error-response.json  eval-client-request-bundled.json  eval-client-request-workspace-yaml.json  eval-client-result-normalized-metric.json  eval-client-result-probe-failure.json  http-target-registry-readiness.json  plan-serve-request.json  plan-serve-response.json  render-input-declaration.json  render-serve-request.json  (+3 more)
protocol/schema/: adapter-protocol-v3.schema.json  adapter-protocol-v4.schema.json  adapter-protocol-v5.schema.json  adapter-protocol-v6.schema.json
python/inferlab-adapter-sdk/: README.md  pyproject.toml
python/inferlab-adapter-sdk/src/inferlab_adapter_sdk/: __init__.py  _generated.py  runtime.py
python/inferlab-adapter-sdk/tests/: test_protocol.py
python/inferlab-bench-runner/: pyproject.toml
python/inferlab-bench-runner/src/inferlab_bench_runner/: __init__.py  bench_client.py
python/inferlab-bench-runner/tests/: test_bench_runner.py
python/inferlab-bench-runner/tests/fixtures/: aiperf-0.11.0-native-warmup-qualification.json  aiperf-0.11.0-summary.json
python/inferlab-eval-runner/: pyproject.toml
python/inferlab-eval-runner/src/inferlab_eval_runner/: __init__.py  __main__.py  lm_eval_entry.py
python/inferlab-eval-runner/src/inferlab_eval_runner/bundled_tasks/: __init__.py
python/inferlab-eval-runner/src/inferlab_eval_runner/bundled_tasks/estonia/: __init__.py
python/inferlab-eval-runner/tests/: test_eval_runner.py
python/inferlab-integration-sglang/: README.md  pyproject.toml
python/inferlab-integration-tensorrt-llm/: README.md  pyproject.toml
python/inferlab-integration-tensorrt-llm/src/inferlab_integration_tensorrt_llm/: __init__.py
python/inferlab-integration-tensorrt-llm/tests/: test_tensorrt_llm.py
python/inferlab-integration-tokenspeed/: README.md  pyproject.toml
python/inferlab-integration-tokenspeed/src/inferlab_integration_tokenspeed/: __init__.py
python/inferlab-integration-tokenspeed/tests/: test_tokenspeed.py
python/inferlab-integration-vllm/: README.md  pyproject.toml
python/inferlab-integration-vllm/src/inferlab_integration_vllm/: __init__.py
python/inferlab-integration-vllm/tests/: test_vllm.py
scripts/: build-python-packages.sh  bump-product-version.sh  check-product-release-version.sh  install.sh  pack-plugin.sh  prepare-python-package-release.sh  protocol-codegen.sh  python-package-inventory.sh  python-package-release-metadata.py
scripts/tests/: release-versioning.sh
website/: README.md  astro.config.mjs  package-lock.json  package.json  site.config.mjs
website/scripts/: content-manifest.mjs  content-projection.mjs  content-projection.test.mjs  site-config.test.mjs  sync-content.mjs  verify-build.mjs
(+19 files in other folders)
