[workspace]
members = [
    "crates/inferlab",
    "crates/inferlab-proxy",
    "crates/inferlab-protocol",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/Infer-Lab/inferlab"

[workspace.dependencies]
agent-plugin-installer = { version = "0.6", features = ["clap"] }
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
flate2 = "1"
fs2 = "0.4"
futures-util = "0.3"
insta = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "1"
wait-timeout = "0.2"
yaml_serde = "0.10"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
unimplemented = "deny"
todo = "deny"
