[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "inferlab-adapter-sdk"
version = "0.4.0"
description = "Generated protocol models and runtime helpers for Inferlab adapters"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["pydantic>=2.13,<3"]

[project.urls]
Repository = "https://github.com/Infer-Lab/InferLab"

[tool.hatch.build.targets.wheel]
packages = ["src/inferlab_adapter_sdk"]
[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "LICENSE", "README.md"]
