[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "inferlab-bench-runner"
version = "0.1.0"
description = "Inferlab direct AIPerf Bench runner"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["inferlab-adapter-sdk==0.1.0"]

[project.scripts]
inferlab-bench-runner = "inferlab_bench_runner.bench_client:main"

[project.urls]
Repository = "https://github.com/Infer-Lab/inferlab"

[tool.hatch.build.targets.wheel]
packages = ["src/inferlab_bench_runner"]
[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "LICENSE"]
