[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "inferlab-eval-runner"
version = "0.5.0"
description = "Inferlab direct Eval runner for OpenAI-compatible endpoints and lm-eval"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "inferlab-adapter-sdk==0.4.0",
]

[project.scripts]
inferlab-eval-runner = "inferlab_eval_runner.eval_client:main"

[project.urls]
Repository = "https://github.com/Infer-Lab/inferlab"

[tool.hatch.build.targets.wheel]
packages = ["src/inferlab_eval_runner"]
[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "LICENSE"]
