[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "inferlab-integration-tensorrt-llm"
version = "0.2.0"
description = "Inferlab adapter integration for TensorRT-LLM"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["inferlab-adapter-sdk==0.2.0", "PyYAML>=6,<7"]

[project.scripts]
inferlab-adapter-tensorrt-llm = "inferlab_integration_tensorrt_llm.__main__:main"

[project.urls]
Repository = "https://github.com/Infer-Lab/inferlab"

[tool.hatch.build.targets.wheel]
packages = ["src/inferlab_integration_tensorrt_llm"]
[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "LICENSE"]
