[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "inferlab-integration-vllm"
version = "0.3.0"
description = "Inferlab adapter integration for vLLM"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["inferlab-adapter-sdk==0.3.0"]

[project.scripts]
inferlab-adapter-vllm = "inferlab_integration_vllm.__main__:main"

[project.urls]
Repository = "https://github.com/Infer-Lab/inferlab"

[tool.hatch.build.targets.wheel]
packages = ["src/inferlab_integration_vllm"]
[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "LICENSE", "README.md"]
